examples/errors/recursive-macro.spcasm

macro recursive
  mov a,#4
  %recursive()
endmacro

recursion_start:
  %recursive()
